test_suite/alan-2022-examples/failing/002430_mutation.alan
source Z9 begin r / := 7 end
